# hfp_hf_my

./: CMakeLists.txt  README.md  mic2Speaker.py  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  bt_app_hf.c  i2s_acc_std.c  i2s_acc_std.h  main.c
